<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="60dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    >

    <!-- Title -->
    <EditText
        android:id="@+id/titleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#666666"
        android:hint="@string/item_title"
        android:importantForAutofill="no"
        android:maxWidth="320dp"
        android:minHeight="48dp"
        android:inputType="text"
        android:textSize="16sp" />

    <!-- Price -->
    <EditText
        android:id="@+id/editTextNumberDecimal4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="#666666"
        android:hint="@string/item_price"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        android:textSize="16sp"
        android:inputType="numberDecimal" />

    <!-- Date -->
    <EditText
        android:id="@+id/dateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_hint_format"
        android:importantForAutofill="no"
        android:focusable="false"
        android:clickable="true"
        android:minHeight="48dp"
        android:textColorHint="#666666"
        android:textSize="16sp" />

    <!-- Description -->
    <EditText
        android:id="@+id/descInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#666666"
        android:hint="@string/item_description"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="16sp" />

    <!-- Add button -->

    <!-- List -->

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add_expense"
        android:textSize="14sp"
        android:backgroundTint="#D32F2F"
        android:textColor="#FFFFFF" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todoList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="16sp"/>




</LinearLayout>
