<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:paddingStart="8dp"
    android:paddingTop="14dp"
    android:paddingEnd="8dp"
    android:paddingBottom="14dp">

    <TextView
        android:id="@+id/tvAddCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+ Add Category"
        android:textColor="?attr/colorOnSurface"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>